--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ html, body {
 #wrapper {
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height: 100vh;  /* используйте vh (viewport height) для задания высоты в процентах от высоты экрана */
     margin: 0 auto;
 }
 
@@ -135,7 +135,7 @@ body {
     background-color: #434445;
     min-width: 1200px;
     flex: 0 0 auto;
-    height: 40px;  
+    height: 40px;
     width: 100%;
     margin: 0 auto 0;
     text-align: center;
@@ -143,6 +143,7 @@ body {
     font-weight: 100;
     line-height: 40px;
     clear: both;
+    flex-shrink: 0;
 }
 
 #footer a {
@@ -211,4 +212,45 @@ body {
     right: 0;
     left: auto;
     width: 100%;
+}
+
+/* Медиа-запрос для планшетов и мобильных устройств */
+@media (max-width: 992px) {
+    #header, #content h1, #content h2 {
+        text-align: center;
+    }
+
+    #contacts {
+        text-align: center;
+        padding-top: 20px;
+    }
+
+    #center {
+        width: 100%;
+        padding: 10px;
+    }
+
+    #content #box_text {
+        float: none;
+        width: 100%;
+    }
+
+    #avatar {
+        display: block;
+        margin: 0 auto;
+        max-width: 90%;
+    }
+}
+
+/* Медиа-запрос только для мобильных устройств */
+@media (max-width: 576px) {
+    #header a {
+        display: block;
+        padding: 10px 0;
+    }
+
+    .button {
+        width: 100%;
+        text-align: center;
+    }
 }
