--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ html, body {
 #wrapper {
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height: 100vh;  /* используйте vh (viewport height) для задания высоты в процентах от высоты экрана */
     margin: 0 auto;
 }
 
@@ -56,7 +56,7 @@ body {
 #center {
     width: 900px;
     margin: 0 auto;
-    padding-bottom:50px;
+    padding-bottom: 10px;
 }
 
 #skills {
@@ -113,15 +113,14 @@ body {
 /*    background-color: #ffffff;*/
     float: right;
     padding: 10px 10px 10px 10px;
-    margin-bottom:10px;
-    
+    margin-bottom: 10px;
 }
 
 #content #box_text i {
     color: #242424;
     font-size: 40px;
     font-weight: 100;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
 }
 
 #content #box_text a {
@@ -136,7 +135,7 @@ body {
     background-color: #434445;
     min-width: 1200px;
     flex: 0 0 auto;
-    height: 40px;  
+    height: 40px;
     width: 100%;
     margin: 0 auto 0;
     text-align: center;
@@ -144,34 +143,114 @@ body {
     font-weight: 100;
     line-height: 40px;
     clear: both;
+    flex-shrink: 0;
 }
 
 #footer a {
     color: inherit;
 }
 
-.download-button {
+.button {
     display: inline-block;
-    padding: 5px 15px; /* уменьшенные отступы */
+    padding: 10px 20px;
     border: none;
-    border-radius: 5px;
-    background-color: #007bff;
-    color: white; /* белый цвет текста для лучшей видимости */
-    text-align: center; /* центрирование текста */
+    border-radius: 25px; /* закругленные углы */
+    background: linear-gradient(45deg, #f06, #9f6); /* градиент */
+    color: white;
     text-decoration: none;
     font-weight: bold;
-    font-size: 14px; /* установите размер шрифта, который вам подходит */
-    transition: background-color 0.3s, transform 0.3s;
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1); /* слегка приподнятая тень */
+    transition: all 0.3s; /* плавный переход */
+    position: relative;
+    overflow: hidden;
 }
 
-.download-button i {
-    margin-left: 5px; /* отступ для иконки */
+.button:hover {
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+    transform: translateY(-2px); /* приподнять кнопку при наведении */
 }
 
-.download-button:hover {
-    background-color: #0056b3;
+.button:active {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transform: translateY(0); /* вернуть кнопку в исходное положение при нажатии */
 }
 
-.download-button:active {
-    transform: scale(0.95);
+.button span {
+    position: relative;
+    z-index: 1;
+}
+
+.button:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 0;
+    height: 2px;
+    background: white;
+    transition: all 0.3s;
+}
+
+.button:after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0;
+    height: 2px;
+    background: white;
+    transition: all 0.3s;
+}
+
+.button:hover:before {
+    left: 0;
+    right: auto;
+    width: 100%;
+}
+
+.button:hover:after {
+    right: 0;
+    left: auto;
+    width: 100%;
+}
+
+/* Медиа-запрос для планшетов и мобильных устройств */
+@media (max-width: 992px) {
+    #header, #content h1, #content h2 {
+        text-align: center;
+    }
+
+    #contacts {
+        text-align: center;
+        padding-top: 20px;
+    }
+
+    #center {
+        width: 100%;
+        padding: 10px;
+    }
+
+    #content #box_text {
+        float: none;
+        width: 100%;
+    }
+
+    #avatar {
+        display: block;
+        margin: 0 auto;
+        max-width: 90%;
+    }
+}
+
+/* Медиа-запрос только для мобильных устройств */
+@media (max-width: 576px) {
+    #header a {
+        display: block;
+        padding: 10px 0;
+    }
+
+    .button {
+        width: 100%;
+        text-align: center;
+    }
 }
